# nayud-batch

./: .gitignore  Cargo.toml
config/: nayud-batch.example.toml
cql/: keyspace.cql
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/errors/: mod.rs
src/health/: mod.rs
src/middleware/: mod.rs
src/replication/: mod.rs
src/types/: mod.rs  response.rs
src/utils/: mod.rs
src/web/: mod.rs
tests/: config_env.rs  failover_integration.rs  failover_unit.rs  replication_queue.rs  response_helpers.rs
