[package]
name = "nayud-batch"
version = "1.0.0"
rust-version = "1.89.0"
edition = "2024"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[dependencies]
ntex = { version = "2.15.1", features = ["tokio"] }
scylla = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "signal"] }
