[package]
name = "nayud-batch"
version = "1.0.0"
rust-version = "1.89.0"
edition = "2024"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
ntex = { version = "2.15.1", features = ["tokio"] }
openssl = "0.10.73"
scylla = { version = "1.3.1", features = ["openssl-010"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "signal"] }
uuid = { version = "1.18.0", features = ["v4"] }
